Added logic to reset order counts in the orders tab

--- a/BuddhaBowls/BuddhaBowls.csproj
+++ b/BuddhaBowls/BuddhaBowls.csproj
@@ -89,6 +89,7 @@
     <Compile Include="MainClass.cs" />
     <Compile Include="Models\BatchItem.cs" />
     <Compile Include="Models\InventoryItem.cs" />
+    <Compile Include="Models\PurchaseOrder.cs" />
     <Compile Include="Models\RecipeItem.cs" />
     <Compile Include="Models\VendorItem.cs" />
     <Compile Include="ReportGenerator.cs" />
