setting up github

--- a/BuddhaBowls/App.config
+++ b/BuddhaBowls/App.config
@@ -11,7 +11,7 @@
     <userSettings>
         <BuddhaBowls.Properties.Settings>
             <setting name="DBLocation" serializeAs="String">
-                <value>C:\Users\Developer\Documents\Visual Studio 2015\Projects\BuddhaBowls\Data</value>
+                <value>C:\Users\Developer\Documents\Visual Studio 2015\Projects\BuddhaBowlsasdfsdf\Data</value>
             </setting>
         </BuddhaBowls.Properties.Settings>
     </userSettings>
