Preparing to get rid of IItem and split recipes to batch and menu

--- a/BuddhaBowls/BuddhaBowls.csproj
+++ b/BuddhaBowls/BuddhaBowls.csproj
@@ -81,6 +81,7 @@
       <HintPath>..\packages\MahApps.Metro.IconPacks.FontAwesome.1.6.0\lib\net45\MahApps.Metro.IconPacks.FontAwesome.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="Microsoft.Expression.Interactions, Version=4.5.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL" />
     <Reference Include="Microsoft.VisualBasic" />
     <Reference Include="System" />
     <Reference Include="System.Data" />
