Fixed main inventory excel generator method

--- a/BuddhaBowls/Properties/Settings.settings
+++ b/BuddhaBowls/Properties/Settings.settings
@@ -8,5 +8,8 @@
     <Setting Name="InventoryOrder" Type="System.Collections.Generic.List&lt;System.String&gt;" Scope="User">
       <Value Profile="(Default)" />
     </Setting>
+    <Setting Name="CategoryOrder" Type="System.Collections.Generic.List&lt;System.String&gt;" Scope="User">
+      <Value Profile="(Default)" />
+    </Setting>
   </Settings>
 </SettingsFile>
