--- a/BuddhaBowls/packages.config
+++ b/BuddhaBowls/packages.config
@@ -2,4 +2,5 @@
 <packages>
   <package id="MahApps.Metro" version="1.4.0-ALPHA030" targetFramework="net452" />
   <package id="MahApps.Metro.IconPacks.FontAwesome" version="1.6.0" targetFramework="net452" />
+  <package id="WPFTextBoxAutoComplete" version="1.0.2" targetFramework="net452" />
 </packages>
